# cf-bot

./: pyproject.toml
cf_bot/: Bot.py  Monitor.py  Participant.py  User.py  main.py
